@@ -1,24 +1,24 @@
 function handle_upgrades() {
-    switch (select.selection.tank_type) {
-        case "Basic_Tower":
-            if (kd[81]) {
-                upgrade(Twin_Tower(select.selection.x, select.selection.y));
-            }
-            break;
-        case "Twin_Tower":
-            if (kd[81]) {
-                upgrade(Triple_Shot_Tower(select.selection.x, select.selection.y));
-            }
-            break;
-        // case "relay":
-        //     if (k[81]) {
-        //         o.push(High_Bandwidth_Relay_Tower(select.selection.x, select.selection.y));
-        //         o[o.length - 1].hp = select.selection.hp / select.selection.mhp * o[o.length - 1].mhp;
-        //         o.splice(select.selection_index, 1);
-        //         select.selection = o[o.length - 1];
-        //         select.selection_index = o.length - 1;
-        //     }
-    }
+    // switch (select.selection.tank_type) {
+    //     case "Basic_Tower":
+    //         if (kd[81]) {
+    //             upgrade(Twin_Tower(select.selection.x, select.selection.y));
+    //         }
+    //         break;
+    //     case "Twin_Tower":
+    //         if (kd[81]) {
+    //             upgrade(Triple_Shot_Tower(select.selection.x, select.selection.y));
+    //         }
+    //         break;
+    //     // case "relay":
+    //     //     if (k[81]) {
+    //     //         o.push(High_Bandwidth_Relay_Tower(select.selection.x, select.selection.y));
+    //     //         o[o.length - 1].hp = select.selection.hp / select.selection.mhp * o[o.length - 1].mhp;
+    //     //         o.splice(select.selection_index, 1);
+    //     //         select.selection = o[o.length - 1];
+    //     //         select.selection_index = o.length - 1;
+    //     //     }
+    // }
     if (k[88]) {
         pt += select.selection.cost;
         //o.splice(select.selection_index, 1);
