@@ -7,6 +7,8 @@ Sub-topics of major changes are intented
 
 2018-12-29
 
+Tank-twin-triple shot bug fixed. Tanks being upgraded to twins would do an additional upgrade to triple shot. This has now been fixed.
+
 Added Changelog
 Fixed GUI text formatting
     Removed underscores from tank names
